--- a/CódigoFuente/BitacorasProduccion/Views/UsersAdmin/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/UsersAdmin/Create.cshtml
@@ -10,8 +10,24 @@
 {
     <!-- iCheck -->
     <link href="@Url.Content("~/Content/vendors/iCheck/skins/flat/green.css")" rel="stylesheet">
+    <!-- Select2 -->
+    <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
 }
 
+@if (@ViewBag.TipoU != null)
+{
+    <input type="hidden" value="@ViewBag.TipoU" id="tipoU" />
+}
+
+@if (@ViewBag.numEmpleado != null)
+{
+    <input type="hidden" value="@ViewBag.numEmpleado" id="e_numEmpleado" />
+}
+@if (@ViewBag.NombreE != null)
+{
+    <input type="hidden" value="@ViewBag.NombreE" id="e_nombre" />
+}
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
@@ -39,17 +55,36 @@
                             @Html.ValidationSummary("", new { @class = "text-danger" })
 
                             <div class="item form-group">
+                                <label class="col-form-label col-md-3 col-sm-3 label-align">Tipo de Usuario</label>
+                                <div class="col-md-6 col-sm-6 ">
+                                    <div class="radio">
+                                        <label>
+                                            <input type="radio" id="radioEmpleado" value="empleado" checked name="tipoUsuario"> Empleado
+                                        </label>
+                                    </div>
+                                    <div class="radio">
+                                        <label>
+                                            <input type="radio" id="radioOtro" value="otro" name="tipoUsuario"> Otro
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="item form-group" id="divEmpleado">
+                                @Html.LabelFor(model => model.IdEmpleado, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    @Html.DropDownList("IdEmpleado", (IEnumerable<SelectListItem>)ViewBag.EmpleadosList, new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @Html.ValidationMessageFor(model => model.IdEmpleado, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+
+                            <div class="item form-group" id="divNombre">
                                 @Html.LabelFor(model => model.Nombre, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
                                     @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control" })
-                                    @*@Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })*@
-                                </div>
-                            </div>
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.Apellidos, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
-                                    @Html.TextBoxFor(m => m.Apellidos, new { @class = "form-control" })
-                                    @*@Html.ValidationMessageFor(model => model.Apellidos, "", new { @class = "text-danger" })*@
+                                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="item form-group">
@@ -78,7 +113,7 @@
                                 @Html.Label("Roles", new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
                                     @foreach (var item in (SelectList)ViewBag.RoleId)
-                                    {                                        
+                                    {
                                         <div class="checkbox">
                                             <label>
                                                 <input type="checkbox" class="flat" name="SelectedRoles" value="@item.Value">@item.Value
@@ -114,8 +149,8 @@
     @Scripts.Render("~/bundles/jqueryval")
     <!-- iCheck -->
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
-    
+    @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
+    @Scripts.Render(Url.Content("~/Scripts/Forms/usuarios.js"))
 }
-
 
 
