--- a/CódigoFuente/BitacorasProduccion/Views/UsersAdmin/UnBlock.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/UsersAdmin/UnBlock.cshtml
@@ -5,6 +5,7 @@
     ViewBag.PrimerNivel = "usuarios";
     ViewBag.SegundoNivel = "usuarios";
     ViewBag.ControllerName = "UsersAdmin";
+    Portal_2_0.Models.empleados empleado = (Portal_2_0.Models.empleados)ViewBag.Empleado;
 }
 
 
@@ -31,7 +32,7 @@
 
                         <dl class="dl-horizontal">
                             <dt>
-                                Usuario
+                                @Html.DisplayNameFor(model => model.UserName)
                             </dt>
                             <dd>
                                 @Html.DisplayFor(model => model.UserName)
@@ -42,18 +43,37 @@
                             <dd>
                                 @Html.DisplayFor(model => model.Email)
                             </dd>
-                            <dt>
-                                @Html.DisplayNameFor(model => model.Nombre)
-                            </dt>
-                            <dd>
-                                @(Model.Nombre+" "+Model.Apellidos)
-                            </dd>
+                            @if (empleado == null)
+                            {
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.Nombre)
+                                </dt>
+                                <dd>
+                                    @Html.DisplayFor(model => model.Nombre)
+                                </dd>
+                            }
+
                             <dt>
                                 @Html.DisplayNameFor(model => model.FechaCreacion)
                             </dt>
                             <dd>
                                 @Html.DisplayFor(model => model.FechaCreacion)
                             </dd>
+                            @if (empleado != null)
+                            {
+                                <dt>
+                                    Número empleado
+                                </dt>
+                                <dd>
+                                    @empleado.numeroEmpleado
+                                </dd>
+                                <dt>
+                                    Nombre
+                                </dt>
+                                <dd>
+                                    @(empleado.nombre+" "+empleado.apellido1+" "+empleado.apellido2)
+                                </dd>
+                            }
                         </dl>
 
                         @using (Html.BeginForm())
