--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Details.cshtml
@@ -36,6 +36,10 @@
                                         <td>@Html.DisplayFor(model => model.numeroEmpleado)</td>
                                     </tr>
                                     <tr>
+                                        <th>@Html.DisplayNameFor(model => model.C8ID)</th>
+                                        <td>@Html.DisplayFor(model => model.C8ID)</td>
+                                    </tr>
+                                    <tr>
                                         <th>@Html.DisplayNameFor(model => model.nombre)</th>
                                         <td>@Html.DisplayFor(model => model.nombre)</td>
                                     </tr>
@@ -66,7 +70,7 @@
                                     <tr>
                                         <th>@Html.DisplayNameFor(model => model.celular)</th>
                                         <td>@Html.DisplayFor(model => model.celular)</td>
-                                    </tr>  
+                                    </tr>
                                     <tr>
                                         <th>@Html.DisplayNameFor(model => model.ingresoFecha)</th>
                                         <td>@Html.DisplayFor(model => model.ingresoFecha)</td>
@@ -95,7 +99,7 @@
                                                 <span>Inactivo</span>
                                             }
                                         </td>
-                                    </tr>                                  
+                                    </tr>
 
                                 </tbody>
                             </table>
