--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Disable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Disable.cshtml
@@ -36,6 +36,10 @@
                                         <td>@Html.DisplayFor(model => model.numeroEmpleado)</td>
                                     </tr>
                                     <tr>
+                                        <th>@Html.DisplayNameFor(model => model.C8ID)</th>
+                                        <td>@Html.DisplayFor(model => model.C8ID)</td>
+                                    </tr>
+                                    <tr>
                                         <th>@Html.DisplayNameFor(model => model.nombre)</th>
                                         <td>@Html.DisplayFor(model => model.nombre)</td>
                                     </tr>
