--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
@@ -70,6 +70,13 @@
                                 </div>
                             </div>
                             <div class="item form-group">
+                                @Html.LabelFor(model => model.C8ID, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    @Html.EditorFor(model => model.C8ID, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.C8ID, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="item form-group">
                                 @Html.LabelFor(model => model.nombre, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
                                     @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
