--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
@@ -70,6 +70,9 @@
                                                     @Html.DisplayNameFor(model => model.numeroEmpleado)
                                                 </th>
                                                 <th>
+                                                    @Html.DisplayNameFor(model => model.C8ID)
+                                                </th>
+                                                <th>
                                                     @Html.DisplayNameFor(model => model.nombre)
                                                 </th>
                                                 <th>
@@ -92,8 +95,8 @@
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.celular)
-                                                </th>                                              
-                                              
+                                                </th>
+
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.ingresoFecha)
                                                 </th>
@@ -120,6 +123,9 @@
                                                     @Html.DisplayFor(modelItem => item.numeroEmpleado)
                                                 </th>
                                                 <th>
+                                                    @Html.DisplayFor(modelItem => item.C8ID)
+                                                </th>
+                                                <th>
                                                     @Html.DisplayFor(modelItem => item.nombre)
                                                 </th>
                                                 <th>
@@ -142,8 +148,8 @@
                                                 </th>
                                                 <th>
                                                     @Html.DisplayFor(modelItem => item.celular)
-                                                </th>                                               
-                                               
+                                                </th>
+
                                                 <th>
                                                     @Html.DisplayFor(modelItem => item.ingresoFecha)
                                                 </th>
