2021-10-08 Se agregan catálogos de turnos, supervisores, operadores y lineas

--- a/CódigoFuente/BitacorasProduccion/Views/Account/Login.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - C&aacute;lculo de Presupuestos</title>
+    <title>@ViewBag.Title - Portal thyssenkrup</title>
     <link href="@Url.Content("~/Content/bootstrap3_3_7.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/login.css")" rel="stylesheet">
 
