--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Edit.cshtml
@@ -1,12 +1,12 @@
-﻿@model Portal_2_0.Models.puesto
+﻿@model Portal_2_0.Models.produccion_lineas
 
 @{
-    ViewBag.Title = "Crear Puesto";
-    ViewBag.PrimerNivel = "recursos_humanos";
-    ViewBag.SegundoNivel = "puestos";
-    ViewBag.ControllerName = "Puestos";
+    ViewBag.Title = "Editar Línea de Producción";
+    ViewBag.PrimerNivel = "bitacoras_produccion";
+    ViewBag.SegundoNivel = "bitacoras_produccion_catalogos";
+    ViewBag.SegundoNivel = "produccion_lineas";
+    ViewBag.ControllerName = "ProduccionLineas";
 }
-
 @section estilos
 {
     <!-- Select2 -->
@@ -14,11 +14,12 @@
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
 }
 
+
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
+                <h3>@ViewBag.Title</h3>
             </div>
         </div>
 
@@ -33,36 +34,32 @@
                     </div>
                     <div class="x_content">
                         <br />
-                        @using (Html.BeginForm("Create", "Puestos", FormMethod.Post, new { @class = "form-horizontal form-label-left" }))
+                        @using (Html.BeginForm("Edit", "ProduccionLineas", FormMethod.Post, new { @class = "form-horizontal form-label-left" }))
                         {
                             @Html.AntiForgeryToken()
                             <h4>Datos del puesto</h4>
                             <hr />
                             @Html.ValidationSummary("", new { @class = "text-danger" })
+                            @Html.HiddenFor(model => model.id)
+                            @Html.HiddenFor(model => model.activo)
 
 
                             <div class="item form-group">
-                                <label class="col-form-label col-md-3 col-sm-3 label-align"> Planta </label>
+                                @Html.LabelFor(model => model.clave_planta, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
-                                    @Html.DropDownList("plantaClave", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @Html.DropDownList("clave_planta", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @Html.ValidationMessageFor(model => model.clave_planta, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
                             <div class="item form-group">
-                                @Html.LabelFor(model => model.areaClave, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                @Html.LabelFor(model => model.linea, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
-                                    @Html.DropDownList("areaClave", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @required = "required", @style = "width:100%" })
-                                    @Html.ValidationMessageFor(model => model.areaClave, "", new { @class = "text-danger" })
+                                    @Html.EditorFor(model => model.linea, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.linea, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
-                                    @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
                             <div class="ln_solid"></div>
                             <div class="item form-group">
                                 <div class="col-md-6 col-sm-6 offset-md-3">
@@ -86,8 +83,23 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render(Url.Content("~/Scripts/Forms/puestos.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
+
+    <script>
+
+        $(document).ready(function () {
+            // Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            })
+        });
+
+        window.onload = function () {
+            document.getElementById('menu_toggle').click();
+            document.getElementById('menu_toggle').click();
+        }
+
+    </script>
 }
 
 
