--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionLineas/Index.cshtml
@@ -1,12 +1,14 @@
-﻿@model IEnumerable<Portal_2_0.Models.puesto>
+﻿@model IEnumerable<Portal_2_0.Models.produccion_lineas>
 
 @{
-    ViewBag.Title = "Listado de Puestos";
-    ViewBag.PrimerNivel = "recursos_humanos";
-    ViewBag.SegundoNivel = "puestos";
-    ViewBag.ControllerName = "Puestos";
+    ViewBag.Title = "Líneas de producción";
+    ViewBag.PrimerNivel = "bitacoras_produccion";
+    ViewBag.SegundoNivel = "bitacoras_produccion_catalogos";
+    ViewBag.TercerNivel = "produccion_lineas";
+    ViewBag.ControllerName = "ProduccionLineas";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
+
 }
 
 @section estilos
@@ -25,11 +27,12 @@
     <input type="hidden" value="@mensajeAlerta.getTipoMensaje()" id="mensajeAlertTipo" />
 }
 
+
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
+                <h3>@ViewBag.Title</h3>
             </div>
         </div>
 
@@ -63,10 +66,7 @@
                                         <thead>
                                             <tr>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.descripcion)
-                                                </th>
-                                                <th>
-                                                    &Aacute;rea
+                                                    @Html.DisplayNameFor(model => model.linea)
                                                 </th>
                                                 <th>
                                                     Planta
@@ -80,49 +80,46 @@
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                            <tr>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.plantas.descripcion)
-                                                </td>
-                                                <td>
-                                                    @if (item.activo)
-                                                    {
-                                                        <span>Activo</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span>Inactivo</span>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-success btm-sm" title="Editar">
-                                                        <i class="fa fa-pencil-square-o"></i>
-                                                    </a>
-                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-info btm-sm" title="Detalles">
-                                                        <i class="fa fa-info-circle"></i>
-                                                    </a>
-
-                                                    @if (!item.activo)
-                                                    {
-                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-warning" s title="Habilitar">
-                                                            <i class="fa fa-unlock"></i>
+                                                <tr>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.linea)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.plantas.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @if (item.activo.HasValue && item.activo.Value)
+                                                        {
+                                                            <span>Activo</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span>Inactivo</span>
+                                                        }
+                                                    </td>
+                                                    <td>
+                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
+                                                            <i class="fa fa-pencil-square-o"></i>
                                                         </a>
-                                                    }
-                                                    else
-                                                    {
-                                                        <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-danger" title="Deshabilitar">
-                                                            <i class="fa fa-lock"></i>
+                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
+                                                            <i class="fa fa-info-circle"></i>
                                                         </a>
-                                                    }
 
-                                                </td>
-                                            </tr>
+                                                        @if (item.activo.HasValue && !item.activo.Value)
+                                                        {
+                                                            <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
+                                                                <i class="fa fa-unlock"></i>
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger" title="Deshabilitar">
+                                                                <i class="fa fa-lock"></i>
+                                                            </a>
+                                                        }
+
+                                                    </td>
+                                                </tr>
                                             }
                                         </tbody>
                                     </table>
@@ -142,14 +139,6 @@
     @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))
 
     @Scripts.Render("~/bundles/dataTables_js")
-
-    <script>
-        //agranda el tamaño de la barra
-        window.onload = function () {
-            document.getElementById('menu_toggle').click();
-            document.getElementById('menu_toggle').click();
-        }
-    </script>
 
 }
 
