--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionOperadores/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionOperadores/Index.cshtml
@@ -1,12 +1,14 @@
-﻿@model IEnumerable<Portal_2_0.Models.puesto>
+﻿@model IEnumerable<Portal_2_0.Models.produccion_operadores>
 
 @{
-    ViewBag.Title = "Listado de Puestos";
-    ViewBag.PrimerNivel = "recursos_humanos";
-    ViewBag.SegundoNivel = "puestos";
-    ViewBag.ControllerName = "Puestos";
+    ViewBag.Title = "Operadores de Producción";
+    ViewBag.PrimerNivel = "bitacoras_produccion";
+    ViewBag.SegundoNivel = "bitacoras_produccion_catalogos";
+    ViewBag.TercerNivel = "produccion_operadores";
+    ViewBag.ControllerName = "ProduccionOperadores";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
+
 }
 
 @section estilos
@@ -25,11 +27,14 @@
     <input type="hidden" value="@mensajeAlerta.getTipoMensaje()" id="mensajeAlertTipo" />
 }
 
+
+
+
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
+                <h3>@ViewBag.Title</h3>
             </div>
         </div>
 
@@ -63,13 +68,22 @@
                                         <thead>
                                             <tr>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.descripcion)
+                                                    @Html.DisplayNameFor(model => model.empleados.numeroEmpleado)
                                                 </th>
                                                 <th>
-                                                    &Aacute;rea
+                                                    @Html.DisplayNameFor(model => model.empleados.nombre)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.empleados.apellido1)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.empleados.apellido2)
                                                 </th>
                                                 <th>
                                                     Planta
+                                                </th>
+                                                <th>
+                                                    L&iacute;nea
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
@@ -82,16 +96,24 @@
                                             {
                                             <tr>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.descripcion)
+                                                    @Html.DisplayFor(modelItem => item.empleados.numeroEmpleado)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.descripcion)
+                                                    @Html.DisplayFor(modelItem => item.empleados.nombre)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.plantas.descripcion)
+                                                    @Html.DisplayFor(modelItem => item.empleados.apellido1)
                                                 </td>
                                                 <td>
-                                                    @if (item.activo)
+                                                    @Html.DisplayFor(modelItem => item.empleados.apellido2)
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.produccion_lineas.plantas.descripcion)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.produccion_lineas.linea)
+                                                </td>
+                                                <td>
+                                                    @if (item.activo.HasValue && item.activo.Value)
                                                     {
                                                         <span>Activo</span>
                                                     }
@@ -101,22 +123,22 @@
                                                     }
                                                 </td>
                                                 <td>
-                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-success btm-sm" title="Editar">
+                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
                                                         <i class="fa fa-pencil-square-o"></i>
                                                     </a>
-                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-info btm-sm" title="Detalles">
+                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
                                                         <i class="fa fa-info-circle"></i>
                                                     </a>
 
-                                                    @if (!item.activo)
+                                                    @if (item.activo.HasValue && !item.activo.Value)
                                                     {
-                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-warning" s title="Habilitar">
+                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
                                                             <i class="fa fa-unlock"></i>
                                                         </a>
                                                     }
                                                     else
                                                     {
-                                                        <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-danger" title="Deshabilitar">
+                                                        <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger" title="Deshabilitar">
                                                             <i class="fa fa-lock"></i>
                                                         </a>
                                                     }
@@ -143,13 +165,4 @@
 
     @Scripts.Render("~/bundles/dataTables_js")
 
-    <script>
-        //agranda el tamaño de la barra
-        window.onload = function () {
-            document.getElementById('menu_toggle').click();
-            document.getElementById('menu_toggle').click();
-        }
-    </script>
-
 }
-
