--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionTurnos/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionTurnos/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@model IEnumerable<Portal_2_0.Models.puesto>
+﻿@model IEnumerable<Portal_2_0.Models.produccion_turnos>
 
 @{
-    ViewBag.Title = "Listado de Puestos";
-    ViewBag.PrimerNivel = "recursos_humanos";
-    ViewBag.SegundoNivel = "puestos";
-    ViewBag.ControllerName = "Puestos";
+    ViewBag.Title = "Listado de Turnos";
+    ViewBag.PrimerNivel = "bitacoras_produccion";
+    ViewBag.SegundoNivel = "bitacoras_produccion_catalogos";
+    ViewBag.TercerNivel = "produccion_turnos";
+    ViewBag.ControllerName = "ProduccionTurnos";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
 }
@@ -25,11 +26,12 @@
     <input type="hidden" value="@mensajeAlerta.getTipoMensaje()" id="mensajeAlertTipo" />
 }
 
+
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
+                <h3>Horarios de Turnos de Producci&oacute;n</h3>
             </div>
         </div>
 
@@ -61,15 +63,18 @@
                                     </div>
                                     <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                                         <thead>
-                                            <tr>
+                                            <tr>                                               
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.descripcion)
                                                 </th>
                                                 <th>
-                                                    &Aacute;rea
+                                                    @Html.DisplayNameFor(model => model.hora_inicio)
                                                 </th>
                                                 <th>
-                                                    Planta
+                                                    @Html.DisplayNameFor(model => model.hora_fin)
+                                                </th>
+                                                <th>
+                                                    <span>Planta</span>
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
@@ -80,18 +85,21 @@
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                            <tr>
+                                            <tr>                                               
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.descripcion)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.descripcion)
+                                                    @Html.DisplayFor(modelItem => item.hora_inicio)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.plantas.descripcion)
+                                                    @Html.DisplayFor(modelItem => item.hora_fin)
                                                 </td>
                                                 <td>
-                                                    @if (item.activo)
+                                                    @Html.DisplayFor(modelItem => item.plantas.descripcion)
+                                                </td>
+                                                <td>
+                                                    @if (item.activo.HasValue && item.activo.Value)
                                                     {
                                                         <span>Activo</span>
                                                     }
@@ -101,22 +109,22 @@
                                                     }
                                                 </td>
                                                 <td>
-                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-success btm-sm" title="Editar">
+                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
                                                         <i class="fa fa-pencil-square-o"></i>
                                                     </a>
-                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.clave})" class="btn btn-info btm-sm" title="Detalles">
+                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
                                                         <i class="fa fa-info-circle"></i>
                                                     </a>
 
-                                                    @if (!item.activo)
+                                                    @if (item.activo.HasValue && !item.activo.Value)
                                                     {
-                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-warning" s title="Habilitar">
+                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
                                                             <i class="fa fa-unlock"></i>
                                                         </a>
                                                     }
                                                     else
                                                     {
-                                                        <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-danger" title="Deshabilitar">
+                                                        <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger" title="Deshabilitar">
                                                             <i class="fa fa-lock"></i>
                                                         </a>
                                                     }
@@ -152,4 +160,3 @@
     </script>
 
 }
-
