--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -37,8 +37,6 @@
 
                     <div class="clearfix"></div>
 
-
-
                     <br />
 
                     <!-- sidebar menu -->
@@ -84,6 +82,55 @@
                                                 <li class="@(ViewBag.SegundoNivel == "usuarios" ? "current-page" : null )"><a href="@Url.Action("Index", "UsersAdmin")">Usuarios</a></li>
                                             </ul>
                                         </li>
+                                    }
+                                    @*@if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_CATALOGOS) || User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
+                                    {
+                                        <li class="@(ViewBag.PrimerNivel == "bitacoras_produccion" ? "active" : null )">
+                                            <a><i class="fa fa-database"></i>Producci&oacute;n - Cat&aacute;logos <span class="fa fa-chevron-down"></span></a>
+                                            <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "bitacoras_produccion" ? "display:block" : null )">
+                                                <li class="@(ViewBag.SegundoNivel == "bitacoras_produccion_catalogos" ? "current-page" : null )"><a href="@Url.Action( "Index", "RolesAdmin")">Turnos</a></li>
+                                            </ul>
+                                        </li>
+                                    }*@
+
+                                    @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_CATALOGOS) || User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
+                                    {
+                                        <li class="@(ViewBag.PrimerNivel == "bitacoras_produccion" ? "active" : null )">
+                                            <a><i class="fa fa-tasks"></i> Producci&oacute;n<span class="fa fa-chevron-down"></span></a>
+                                            <ul class="nav child_menu">
+                                                @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_CATALOGOS))
+                                                {
+                                                    <li class="@(ViewBag.SegundoNivel == "bitacoras_produccion_catalogos" ? "active" : null )">
+                                                        <a>C&aacute;talogos <span class="fa fa-chevron-down"></span></a>
+                                                        <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "bitacoras_produccion_catalogos" ? "display:block" : null )">
+                                                            <li class="@(ViewBag.TercelNivel == "produccion_turnos" ? "current-page" : null )"><a href="@Url.Action( "Index", "ProduccionTurnos")">Turnos</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "produccion_lineas" ? "current-page" : null )"><a href="@Url.Action( "Index", "ProduccionLineas")">L&iacute;neas Producci&oacute;n</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "produccion_supervisores" ? "current-page" : null )"><a href="@Url.Action( "Index", "ProduccionSupervisores")">Supervisores</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "produccion_operadores" ? "current-page" : null )"><a href="@Url.Action( "Index", "ProduccionOperadores")">Operadores</a></li>
+                                                            @if (User.IsInRole(TipoRoles.ADMIN))
+                                                            { 
+                                                                 <li class="@(ViewBag.TercelNivel == "produccion_bom" ? "current-page" : null )"><a href="@Url.Action( "Index", "Bom")">Bom</a></li>
+                                                            }
+                                                            </ul>
+                                                    </li>
+                                                }
+
+                                                @*<li>
+                                                    <a href="#level1_2">Level One</a>
+                                                </li>*@
+                                                    @*Ejemplo de más submenus
+                                                    @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_CATALOGOS))
+                                                {
+                                                    <li class="@(ViewBag.SegundoNivel == "bitacoras_produccion_catalogos" ? "active" : null )">
+                                                        <a>C&aacute;talogos <span class="fa fa-chevron-down"></span></a>
+                                                        <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "bitacoras_produccion_catalogos" ? "display:block" : null )">
+                                                            <li class="@(ViewBag.TercelNivel == "produccion_turnos" ? "current-page" : null )"><a href="@Url.Action( "Index", "ProduccionTurnos")">Turnos</a></li>
+                                                        </ul>
+                                                    </li>
+                                                }*@
+                                            </ul>
+                                        </li>
+
                                     }
                                 </ul>
                             }
